--- a/DataFormats/Common/CMakeLists.txt
+++ b/DataFormats/Common/CMakeLists.txt
@@ -35,26 +35,21 @@ target_include_directories(DataFormatsCommon PUBLIC
  ${UUID_INCLUDE_DIR}
 )
 target_link_libraries(DataFormatsCommon PUBLIC
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
-  Core
+  Boost::filesystem
+  Boost::iostreams
+  Boost::program_options
+  Boost::python27
+  Boost::regex
+  Boost::serialization
+  Boost::system
+  Boost::thread
   DataFormatsProvenance
   DataFormatsStdDictionaries
   FWCoreMessageLogger
   FWCoreUtilities
-  MathCore
-  Net
-  RIO
-  Thread
-  Tree
-  dl
+  Python2::Python
+  ROOT::Core
+  Threads::Threads
 )
 
 install( TARGETS DataFormatsCommon DESTINATION  lib  EXPORT stitched::DataFormatsCommon)
