--- a/FWCore/Framework/CMakeLists.txt
+++ b/FWCore/Framework/CMakeLists.txt
@@ -150,7 +150,7 @@ target_include_directories(FWCoreFramework PUBLIC
  ${Boost_INCLUDE_DIR}
  ${Boost_INCLUDE_DIR}/python
  ${MD5_INCLUDE_DIR}
- ${PYTHON_INCLUDE_DIR}
+ ${Python2_INCLUDE_DIRS}
  ${ROOT_INCLUDE_DIR}
  ${TBB_INCLUDE_DIRS}
  ${TINYXML2_INCLUDE_DIR}
@@ -158,16 +158,14 @@ target_include_directories(FWCoreFramework PUBLIC
  ${XERCESC_INCLUDE_DIR}
 )
 target_link_libraries(FWCoreFramework PUBLIC
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
-  Core
+  Boost::filesystem
+  Boost::iostreams
+  Boost::program_options
+  Boost::python27
+  Boost::regex
+  Boost::serialization
+  Boost::system
+  Boost::thread
   DataFormatsCommon
   DataFormatsProvenance
   FWCoreCommon
@@ -178,12 +176,9 @@ target_link_libraries(FWCoreFramework PUBLIC
   FWCoreServiceRegistry
   FWCoreUtilities
   FWCoreVersion
-  MathCore
-  Net
-  RIO
-  Thread
-  Tree
-  dl
+  Python2::Python
+  ROOT::Core
+  Threads::Threads
 )
 
 install( TARGETS FWCoreFramework DESTINATION  lib  EXPORT stitched::FWCoreFramework)
