--- a/FWCore/ServiceRegistry/CMakeLists.txt
+++ b/FWCore/ServiceRegistry/CMakeLists.txt
@@ -27,7 +27,7 @@ target_include_directories(FWCoreServiceRegistry PUBLIC
  ${Boost_INCLUDE_DIR}
  ${Boost_INCLUDE_DIR}/python
  ${MD5_INCLUDE_DIR}
- ${PYTHON_INCLUDE_DIR}
+ ${Python2_INCLUDE_DIRS}
  ${ROOT_INCLUDE_DIR}
  ${TBB_INCLUDE_DIRS}
  ${TINYXML2_INCLUDE_DIR}
