--- a/FWCore/Services/CMakeLists.txt
+++ b/FWCore/Services/CMakeLists.txt
@@ -13,7 +13,7 @@ target_include_directories(FWCoreServices PUBLIC
  ${Boost_INCLUDE_DIR}
  ${Boost_INCLUDE_DIR}/python
  ${MD5_INCLUDE_DIR}
- ${PYTHON_INCLUDE_DIR}
+ ${Python2_INCLUDE_DIRS}
  ${ROOT_INCLUDE_DIR}
  ${TBB_INCLUDE_DIRS}
  ${TINYXML2_INCLUDE_DIR}
@@ -21,17 +21,15 @@ target_include_directories(FWCoreServices PUBLIC
  ${XERCESC_INCLUDE_DIR}
 )
 target_link_libraries(FWCoreServices PUBLIC
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
   ${XERCESC_LIBRARIES}
-  Core
+  Boost::filesystem
+  Boost::iostreams
+  Boost::program_options
+  Boost::python27
+  Boost::regex
+  Boost::serialization
+  Boost::system
+  Boost::thread
   DataFormatsCommon
   DataFormatsProvenance
   DataFormatsStreamer
@@ -42,14 +40,11 @@ target_link_libraries(FWCoreServices PUBLIC
   FWCorePluginManager
   FWCoreServiceRegistry
   FWCoreUtilities
-  Hist
-  MathCore
-  Matrix
-  Net
-  RIO
-  Thread
-  Tree
-  dl
+  Python2::Python
+  ROOT::Core
+  ROOT::Hist
+  ROOT::Matrix
+  Threads::Threads
 )
 
 install( TARGETS FWCoreServices DESTINATION  lib  EXPORT stitched::FWCoreServices)
