--- a/Utilities/XrdAdaptor/plugins/CMakeLists.txt
+++ b/Utilities/XrdAdaptor/plugins/CMakeLists.txt
@@ -8,12 +8,13 @@ target_include_directories(UtilitiesXrdAdaptorPlugin PUBLIC
  ${Boost_INCLUDE_DIR}/python
  ${MD5_INCLUDE_DIR}
  ${OPENSSL_INCLUDE_DIR}
- ${PYTHON_INCLUDE_DIR}
+ ${Python2_INCLUDE_DIRS}
  ${ROOT_INCLUDE_DIR}
  ${TBB_INCLUDE_DIRS}
  ${TINYXML2_INCLUDE_DIR}
  ${UUID_INCLUDE_DIR}
  ${XROOTD_INCLUDE_DIR}
+ ${XROOTD_INCLUDE_DIR}/xrootd
 )
 add_compile_options("-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64")
 target_link_libraries(UtilitiesXrdAdaptorPlugin PUBLIC
