--- a/DataFormats/Provenance/CMakeLists.txt
+++ b/DataFormats/Provenance/CMakeLists.txt
@@ -63,25 +63,20 @@ target_include_directories(DataFormatsProvenance PUBLIC
  ${UUID_INCLUDE_DIR}
 )
 target_link_libraries(DataFormatsProvenance PUBLIC
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
   ${TBB_LIBRARIES}
-  Core
+  Boost::filesystem
+  Boost::iostreams
+  Boost::program_options
+  Boost::python27
+  Boost::regex
+  Boost::serialization
+  Boost::system
+  Boost::thread
   FWCoreMessageLogger
   FWCoreUtilities
-  MathCore
-  Net
-  RIO
-  Thread
-  Tree
-  dl
+  Python2::Python
+  ROOT::Core
+  Threads::Threads
 )
 
 install( TARGETS DataFormatsProvenance DESTINATION  lib  EXPORT stitched::DataFormatsProvenance)
