--- a/FWCore/FWLite/bin/CMakeLists.txt
+++ b/FWCore/FWLite/bin/CMakeLists.txt
@@ -12,23 +12,19 @@ target_include_directories(edmClassStorageSize PUBLIC
  ${UUID_INCLUDE_DIR}
 )
 target_link_libraries(edmClassStorageSize PUBLIC
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
-  Core
+  ${TINYXML2_LIBRARY}
+  Boost::filesystem
+  Boost::iostreams
+  Boost::program_options
+  Boost::python27
+  Boost::regex
+  Boost::serialization
+  Boost::system
+  Boost::thread
   FWCoreFWLite
-  MathCore
-  Net
-  RIO
-  Thread
-  Tree
-  dl
+  Python2::Python
+  ROOT::Core
+  Threads::Threads
 )
 
 install( TARGETS edmClassStorageSize DESTINATION  bin  EXPORT stitched::edmClassStorageSize)
@@ -47,23 +43,19 @@ target_include_directories(edmBranchStorageSize PUBLIC
  ${UUID_INCLUDE_DIR}
 )
 target_link_libraries(edmBranchStorageSize PUBLIC
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
-  Core
+  ${TINYXML2_LIBRARY}
+  Boost::filesystem
+  Boost::iostreams
+  Boost::program_options
+  Boost::python27
+  Boost::regex
+  Boost::serialization
+  Boost::system
+  Boost::thread
   FWCoreFWLite
-  MathCore
-  Net
-  RIO
-  Thread
-  Tree
-  dl
+  Python2::Python
+  ROOT::Core
+  Threads::Threads
 )
 
 install( TARGETS edmBranchStorageSize DESTINATION  bin  EXPORT stitched::edmBranchStorageSize)
