--- a/FWCore/Services/plugins/CMakeLists.txt
+++ b/FWCore/Services/plugins/CMakeLists.txt
@@ -25,30 +25,31 @@ target_include_directories(FWCoreServicesPlugins PUBLIC
  ${Boost_INCLUDE_DIR}/python
  ${MD5_INCLUDE_DIR}
  ${OPENSSL_INCLUDE_DIR}
- ${PYTHON_INCLUDE_DIR}
+ ${Python2_INCLUDE_DIRS}
  ${ROOT_INCLUDE_DIR}
  ${TBB_INCLUDE_DIRS}
  ${TINYXML2_INCLUDE_DIR}
  ${UUID_INCLUDE_DIR}
  ${XERCESC_INCLUDE_DIR}
  ${XROOTD_INCLUDE_DIR}
+ ${XROOTD_INCLUDE_DIR}/xrootd
 )
 add_compile_options("-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64")
 target_link_libraries(FWCoreServicesPlugins PUBLIC
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
+  Boost::filesystem
+  Boost::iostreams
+  Boost::program_options
+  Boost::python27
+  Boost::regex
+  Boost::serialization
+  Boost::system
+  Boost::thread
   FWCoreServices
+  Python2::Python
+  Threads::Threads
   UtilitiesStorageFactory
   UtilitiesXrdAdaptor
   atomic
-  dl
 )
 
 install( TARGETS FWCoreServicesPlugins DESTINATION  lib  EXPORT stitched::FWCoreServicesPlugins)
