--- a/FWCore/TestProcessor/CMakeLists.txt
+++ b/FWCore/TestProcessor/CMakeLists.txt
@@ -12,7 +12,7 @@ target_include_directories(FWCoreTestProcessor PUBLIC
  ${Boost_INCLUDE_DIR}
  ${Boost_INCLUDE_DIR}/python
  ${MD5_INCLUDE_DIR}
- ${PYTHON_INCLUDE_DIR}
+ ${Python2_INCLUDE_DIRS}
  ${ROOT_INCLUDE_DIR}
  ${TBB_INCLUDE_DIRS}
  ${TINYXML2_INCLUDE_DIR}
@@ -20,18 +20,18 @@ target_include_directories(FWCoreTestProcessor PUBLIC
  ${XERCESC_INCLUDE_DIR}
 )
 target_link_libraries(FWCoreTestProcessor PUBLIC
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
-  ${PYTHON_LIBRARY}
+  Boost::filesystem
+  Boost::iostreams
+  Boost::program_options
+  Boost::python27
+  Boost::regex
+  Boost::serialization
+  Boost::system
+  Boost::thread
   FWCoreFramework
   FWCorePythonParameterSet
-  dl
+  Python2::Python
+  Threads::Threads
 )
 
 install( TARGETS FWCoreTestProcessor DESTINATION  lib  EXPORT stitched::FWCoreTestProcessor)
