--- a/FWCore/TestProcessor/test/CMakeLists.txt
+++ b/FWCore/TestProcessor/test/CMakeLists.txt
@@ -8,7 +8,7 @@ target_include_directories(testFWCoreTestProcessor PUBLIC
  ${Boost_INCLUDE_DIR}/python
  ${CPPUNIT_INCLUDE_DIR}
  ${MD5_INCLUDE_DIR}
- ${PYTHON_INCLUDE_DIR}
+ ${Python2_INCLUDE_DIRS}
  ${ROOT_INCLUDE_DIR}
  ${TBB_INCLUDE_DIRS}
  ${TINYXML2_INCLUDE_DIR}
@@ -16,22 +16,22 @@ target_include_directories(testFWCoreTestProcessor PUBLIC
  ${XERCESC_INCLUDE_DIR}
 )
 target_link_libraries(testFWCoreTestProcessor PUBLIC
-  ${Boost_FILESYSTEM_LIBRARY_RELEASE}
-  ${Boost_IOSTREAMS_LIBRARY_RELEASE}
-  ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}
-  ${Boost_PYTHON_LIBRARY_RELEASE}
-  ${Boost_REGEX_LIBRARY_RELEASE}
-  ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-  ${Boost_SYSTEM_LIBRARY_RELEASE}
-  ${Boost_THREAD_LIBRARY_RELEASE}
   ${CPPUNIT_LIBRARY}
-  ${PYTHON_LIBRARY}
+  Boost::filesystem
+  Boost::iostreams
+  Boost::program_options
+  Boost::python27
+  Boost::regex
+  Boost::serialization
+  Boost::system
+  Boost::thread
   FWCoreIntegration
   FWCoreParameterSet
   FWCorePythonParameterSet
   FWCoreTestProcessor
   FWCoreUtilities
-  dl
+  Python2::Python
+  Threads::Threads
 )
 
 add_test(NAME testFWCoreTestProcessor COMMAND testFWCoreTestProcessor)
