--- a/IOPool/Input/CMakeLists.txt
+++ b/IOPool/Input/CMakeLists.txt
@@ -23,7 +23,7 @@ target_include_directories(IOPoolInput PUBLIC
  ${CLHEP_INCLUDE_DIR}
  ${MD5_INCLUDE_DIR}
  ${OPENSSL_INCLUDE_DIR}
- ${PYTHON_INCLUDE_DIR}
+ ${Python2_INCLUDE_DIRS}
  ${ROOT_INCLUDE_DIR}
  ${TBB_INCLUDE_DIRS}
  ${TINYXML2_INCLUDE_DIR}
@@ -33,7 +33,6 @@ target_include_directories(IOPoolInput PUBLIC
 add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(IOPoolInput PUBLIC
   ${CLHEP_MAIN_LIBRARY}
-  Core
   DataFormatsCommon
   DataFormatsProvenance
   FWCoreCatalog
@@ -44,11 +43,7 @@ target_link_libraries(IOPoolInput PUBLIC
   FWCoreSources
   FWCoreUtilities
   IOPoolCommon
-  MathCore
-  Net
-  RIO
-  Thread
-  Tree
+  ROOT::Core
   UtilitiesStorageFactory
 )
 
