--- a/IOPool/TFileAdaptor/test/CMakeLists.txt
+++ b/IOPool/TFileAdaptor/test/CMakeLists.txt
@@ -8,7 +8,7 @@ target_include_directories(test_TFileAdaptor_TFile PUBLIC
  ${Boost_INCLUDE_DIR}/python
  ${MD5_INCLUDE_DIR}
  ${OPENSSL_INCLUDE_DIR}
- ${PYTHON_INCLUDE_DIR}
+ ${Python2_INCLUDE_DIRS}
  ${ROOT_INCLUDE_DIR}
  ${TBB_INCLUDE_DIRS}
  ${TINYXML2_INCLUDE_DIR}
@@ -17,14 +17,9 @@ target_include_directories(test_TFileAdaptor_TFile PUBLIC
 )
 add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(test_TFileAdaptor_TFile PUBLIC
-  Core
   FWCorePluginManager
   IOPoolTFileAdaptor
-  MathCore
-  Net
-  RIO
-  Thread
-  Tree
+  ROOT::Core
   UtilitiesStorageFactory
 )
 
